[package]
name = "nanochat"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Twitch chat client"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beef = "0.5.2"
futures-util = "0.3.28"
home = "0.5.5"
mimalloc = { version = "0.1.37", default-features = false }
rand = "0.8.5"
rustls-native-certs = "0.6.3"
tokio = { version = "1.28.2", features = ["net", "macros", "rt", "signal", "time", "io-util"] }
tokio-rustls = "0.24.1"
tokio-stream = { version = "0.1.14", features = ["io-util"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uwuify = { version = "0.2.2", default-features = false }

[dependencies.twitch]
git = "https://github.com/jprochazk/twitch-rs.git"
version = "0.1.0"
features = ["simd"]
